# gene_plug_voltage_predictor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
config/: cleaning_common.yaml  cleaning_ep370g.yaml  cleaning_ep400g.yaml  datarobot_ep370g.json  datarobot_ep370g_ts.json  datarobot_ep370g_ts_binary_32kv.json  datarobot_ep370g_ts_binary_32kv_v3.json  datarobot_ep370g_ts_binary_32kv_v4.json  datarobot_ep370g_ts_binary_within14d_v1.json  datarobot_ep370g_ts_binary_within14d_v2.json  datarobot_ep370g_ts_v3.json  datarobot_ep370g_ts_v4.json  datarobot_ep370g_ts_v5.json  datarobot_ep370g_ts_v6.json  datarobot_ep400g.json
docs/experiments/: exp-001.md  exp-002.md  exp-003.md  exp-004.md  exp-005.md  exp-007.md  exp-011.md  exp-012.md  exp-013.md  exp-014.md  exp-015.md
docs/superpowers/plans/: 2026-04-28-build-dataset-cli.md  2026-04-28-datarobot-ts-migration.md  2026-04-28-feature-engineering.md  2026-04-28-future-7d-max-target.md  2026-04-28-trend-features.md  2026-05-07-new-data-rerun-exp008-exp009.md
docs/superpowers/specs/: 2026-04-28-build-dataset-cli-design.md  2026-04-28-datarobot-ts-migration-design.md  2026-04-28-feature-engineering-design.md  2026-04-28-future-7d-max-target-design.md  2026-04-28-trend-features-design.md
migration/: analyze_ep400g_locations.py  analyze_locations.py  build_legacy_summary5.py  calibrate_exchange_detection.py  check_9580_9581_details.py  check_header.py  check_voltage_over_50.py  ep370g_location_stats.csv  ep370g_location_stats.md  ep400g_location_stats.csv  ep400g_location_stats.md  evaluate_exchange_precision.py  evaluate_with_new_detect.py  extract_fp_details.py  inspect_legacy_exchange_labels.py  inventory.md  plot_ep400g_voltage_vs_runtime.py  plot_exchange_window.py  plot_fp_analysis.py  plot_fp_zoom_only.py  plot_fp_zoom_v5.py  plot_voltage_vs_runtime.py  runtime_utils.py  voltage_over_50_summary.csv
scripts/: analyze_relative_threshold.py  analyze_too_early_ep370g.py  b1_lightgbm_ep370g.py  b1_lightgbm_ep370g_v2.py  build_dataset_b3_ep370g.py  evaluate_b3_dr_predictions.py  evaluate_first_crossing.py  evaluate_rule_by_exchange.py  evaluate_rule_vs_dr.py  fetch_b3_backtest_predictions.py  filter_too_early_ep370g.py  filter_too_early_ep370g_v2.py  optimize_acceleration_alert.py  optimize_alert_rule.py  optimize_early_level_alert.py  optimize_multistage_alert.py  optimize_relative_alert.py  optimize_timely_alert.py  refine_ep370g_ml.py  visualize_hours_at_31kv.py  visualize_voltage_by_runtime.py  wait_and_fetch_exp009.py
specs/: datarobot_conventions.md  input_schema.md
src/gene_plug_voltage_predictor/: __init__.py  constants.py
src/gene_plug_voltage_predictor/cleaning/: __init__.py  exchange.py  pipeline.py  reporters.py  steps.py
src/gene_plug_voltage_predictor/cli/: build_dataset.py  build_dataset_ts.py  clean.py  fetch_results.py  train.py
src/gene_plug_voltage_predictor/datarobot/: __init__.py  client.py  config.py  drift_check.py  experiment_reporter.py  logging_setup.py  models.py  partitioning.py  pipeline.py  predictions.py  project.py
src/gene_plug_voltage_predictor/features/: __init__.py  features.py  hours_at_threshold.py  target.py  trend_features.py  ts_dataset.py
src/gene_plug_voltage_predictor/io/: __init__.py  csv_loader.py  schema.py
src/gene_plug_voltage_predictor/utils/: hashing.py
tests/: test_cleaning_exchange.py  test_cleaning_pipeline.py  test_cleaning_reporters.py  test_cleaning_steps.py  test_cli_build_dataset.py  test_csv_loader.py  test_experiment_reporter.py  test_features_features.py  test_features_target.py  test_features_trend.py  test_features_ts_dataset.py  test_hashing.py
tests/datarobot/: conftest.py  test_client.py  test_config_validation.py  test_drift_check.py  test_models.py  test_partitioning.py  test_pipeline.py
tests/datarobot/fixtures/: test_sample.csv  train_sample.csv
