[project]
name = "gene-plug-voltage-predictor"
version = "0.1.0"
description = "EP370G / EP400G plug voltage prediction models (Phase 0)"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "datarobot>=3.5",
    "tqdm>=4.67",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gene_plug_voltage_predictor"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.13"
strict = true
