[project]
name = "gene-plug-voltage-predictor"
version = "0.1.0"
description = "EP370G / EP400G plug voltage prediction models (Phase 0)"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "datarobot>=3.5",
    "tqdm>=4.67",
    "pydantic>=2.6",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gene_plug_voltage_predictor"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# Allow Japanese full-width punctuation (、。（）／ 等) in comments / docstrings.
# Plan documents use 全角 punctuation intentionally, and flagging RUF001/2/3
# produces noise without safety benefit.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Ported datarobot_pipeline template code keeps upstream conventions; downgrading
# stylistic checks keeps the port reviewable against its source without drift.
"src/gene_plug_voltage_predictor/datarobot/client.py" = ["UP024"]
"src/gene_plug_voltage_predictor/datarobot/drift_check.py" = ["N803", "N806"]
"src/gene_plug_voltage_predictor/datarobot/models.py" = ["B023"]
# Ported tests retain upstream import style and plain-string pytest.raises matches.
"tests/datarobot/*.py" = ["I001", "RUF043"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "yaml",
    "datarobot",
    "datarobot.*",
    "lightgbm",
    "lightgbm.*",
    "sklearn",
    "sklearn.*",
]
ignore_missing_imports = true

# Ported datarobot_pipeline template modules are not strict-typed upstream.
# Relax strict checks to preserve the port (no scope creep into the template).
# Our new code (pipeline.py, experiment_reporter.py) stays under strict mode.
[[tool.mypy.overrides]]
module = [
    "gene_plug_voltage_predictor.datarobot.client",
    "gene_plug_voltage_predictor.datarobot.config",
    "gene_plug_voltage_predictor.datarobot.drift_check",
    "gene_plug_voltage_predictor.datarobot.logging_setup",
    "gene_plug_voltage_predictor.datarobot.models",
    "gene_plug_voltage_predictor.datarobot.partitioning",
    "gene_plug_voltage_predictor.datarobot.predictions",
    "gene_plug_voltage_predictor.datarobot.project",
]
disable_error_code = [
    "no-any-return",
    "arg-type",
    "assignment",
    "attr-defined",
    "var-annotated",
    "no-untyped-call",
    "unused-ignore",
]
